--- a/src/components/common/PlayerCard/PlayerCard.scss
+++ b/src/components/common/PlayerCard/PlayerCard.scss
@@ -3,7 +3,7 @@
 $corner-cut: 30px;
 
 .card-selector {
-    padding: 1.4rem !important;
+    padding: 0 !important;
 }
 
 .card-image {
