--- a/src/components/pages/Home/Home.scss
+++ b/src/components/pages/Home/Home.scss
@@ -10,8 +10,10 @@
 
 .home-cards-wrapper {
     order: 1;
+    padding-bottom: 1rem;
     @media only screen and (max-width: $tablet-width) {
         order: 2;
+        padding-top: 1rem;
     }
 }
 
